--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "vite-plugin-checker": "^0.11.0",
     "vite-plugin-svgr": "^4.5.0",
     "vite-tsconfig-paths": "^5.1.4",
+    "xlsx": "^0.18.5",
     "zod": "^4.3.5",
     "zustand": "^5.0.10"
   },
